--- a/angular.json
+++ b/angular.json
@@ -3,22 +3,42 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "AspnetCore-Angular-Universal": {
+    "Aspnetcore-Angular-PWA": {
       "root": "",
       "sourceRoot": "ClientApp",
       "projectType": "application",
       "prefix": "app",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss"
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "wwwroot/dist",
-            "main": "ClientApp/boot-browser.ts",
+            "index": "ClientApp/index.html",
+            "main": "ClientApp/boot.browser.ts",
             "polyfills": "ClientApp/polyfills/polyfills.ts",
             "tsConfig": "ClientApp/tsconfig.app.json",
-            "assets": [],
-            "styles": [],
+            "assets": [
+            {
+              "glob": "**/*",
+              "input": "ClientApp/assets",
+              "output": "/assets"
+            },
+            {
+              "glob": "favicon.ico",
+              "input": "ClientApp",
+              "output": "/"
+            },
+            {
+              "glob": "manifest.json",
+              "input": "ClientApp",
+              "output": "/"
+            }],
+            "styles": ["ClientApp/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -44,18 +64,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "AspnetCore-Angular-Universal:build"
+            "browserTarget": "Aspnetcore-Angular-PWA:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "AspnetCore-Angular-Universal:build:production"
+              "browserTarget": "Aspnetcore-Angular-PWA:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "AspnetCore-Angular-Universal:build"
+            "browserTarget": "Aspnetcore-Angular-PWA:build"
           }
         },
         "test": {
@@ -65,9 +85,19 @@
             "polyfills": "ClientApp/polyfills.ts",
             "tsConfig": "ClientApp/tsconfig.spec.json",
             "karmaConfig": "ClientApp/karma.conf.js",
-            "styles": ["ClientApp/styles.css"],
             "scripts": [],
-            "assets": ["ClientApp/favicon.ico", "ClientApp/assets"]
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "ClientApp/assets",
+                "output": "/assets"
+              },
+              {
+                "glob": "favicon.ico",
+                "input": "ClientApp",
+                "output": "/"
+              }],
+              "styles": ["ClientApp/styles.scss"]
           }
         },
         "lint": {
@@ -82,7 +112,96 @@
         }
       }
     },
-    "AspnetCore-Angular-Universal-e2e": {
+    "Aspnetcore-Angular-PWA-SSR": {
+      "root": "",
+      "sourceRoot": "ClientApp",
+      "projectType": "application",
+      "prefix": "app",
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss"
+        }
+      },
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "wwwroot/dist",
+            "main": "ClientApp/boot.browser.ts",
+            "tsConfig": "ClientApp/tsconfig.app.json"
+            
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "ClientApp/environments/environment.ts",
+                  "with": "ClientApp/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "media",
+              "sourceMap": false,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "bundleDependencies": "all"
+            }
+
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "Aspnetcore-Angular-PWA:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "Aspnetcore-Angular-PWA:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "Aspnetcore-Angular-PWA:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "ClientApp/test.ts",
+            "polyfills": "ClientApp/polyfills.ts",
+            "tsConfig": "ClientApp/tsconfig.spec.json",
+            "karmaConfig": "ClientApp/karma.conf.js",
+            "scripts": [],
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "ClientApp/assets",
+                "output": "/assets"
+              },
+              {
+                "glob": "favicon.ico",
+                "input": "ClientApp",
+                "output": "/"
+              }],
+              "styles": ["ClientApp/styles.scss"]
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "ClientApp/tsconfig.app.json",
+              "ClientApp/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**"]
+          }
+        }
+      }
+    },
+    "Aspnetcore-Angular-PWA-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -90,7 +209,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "AspnetCore-Angular-Universal:serve"
+            "devServerTarget": "Aspnetcore-Angular-PWA:serve"
           }
         },
         "lint": {
@@ -103,5 +222,5 @@
       }
     }
   },
-  "defaultProject": "AspnetCore-Angular-Universal"
+  "defaultProject": "Aspnetcore-Angular-PWA"
 }
