--- a/package.json
+++ b/package.json
@@ -2,19 +2,17 @@
   "name": "angular4-aspnetcore-universal",
   "version": "1.0.0-rc3",
   "scripts": {
+    "ng": "ng",
     "clean:install": "npm run clean && rimraf ./node_modules ./bin ./obj ./package-lock.json && dotnet restore && npm i",
-    "lint": "tslint -p tsconfig.json",
-    "test": "npm run build:vendor && karma start ClientApp/test/karma.conf.js",
-    "test:watch": "npm run test -- --auto-watch --no-single-run",
-    "test:ci": "npm run test -- --browsers PhantomJS_custom",
-    "test:ci:watch": "npm run test:ci -- --auto-watch --no-single-run",
-    "test:coverage": "npm run test -- --coverage",
-    "build:dev": "npm run build:vendor && npm run build:webpack",
-    "build:webpack": "webpack --progress --color",
-    "build:prod": "npm run clean && npm run build:vendor -- --env.prod && npm run build:webpack -- --env.prod",
-    "build:p": "npm run build:webpack -- --env.prod",
-    "build:vendor": "webpack --config webpack.config.vendor.js --progress --color",
-    "clean": "rimraf wwwroot/dist clientapp/dist"
+    "start": "ng serve",
+    "test": "ng test",
+    "lint": "tslint ./src/**/*.ts -t verbose",
+    "e2e": "ng e2e",
+    "build": "ng build",
+    "build:ssr": "ng build --configuration=production --project=Aspnetcore-Angular-PWA-SSR",
+    "serve": "dotnet serve --project aspnetcore-angular-pwa.csproj",
+    "build:client-and-server-bundles": "ng build --prod && ng run Aspnetcore-Angular-PWA:server",
+    "webpack:server": "webpack --config webpack.config.js --progress --colors"
   },
   "dependencies": {
     "@angular/animations": "^6.0.3",
@@ -61,7 +59,6 @@
     "to-string-loader": "^1.1.5",
     "typescript": "~2.7.2",
     "url-loader": "^1.0.1",
-    "webpack": "^4.9.1",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.2",
     "zone.js": "^0.8.26"
@@ -70,7 +67,6 @@
     "@angular-devkit/build-angular": "~0.6.6",
     "@angular/cli": "^6.0.5",
     "@angular/compiler-cli": "6.0.3",
-    "@ngtools/webpack": "^6.0.5",
     "@types/chai": "^4.1.3",
     "@types/jasmine": "^2.8.7",
     "chai": "^4.1.2",
@@ -90,6 +86,7 @@
     "mini-css-extract-plugin": "^0.4.0",
     "tslint": "^5.10.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack": "^4.16.5",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^2.1.4"
   }
